--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -25,4 +25,4 @@ jobs:
         cd ./python
         echo "${{ secrets.DOCKERPW }}" | docker login -u johndavidmarx --password-stdin
         docker image build -t johndavidmarx/gitops:hellov1.3 .
-        docker push johndavidmarx/gitops:hellov1.3
+        docker push louiskimlevu/gitops:hellov1.3
