--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
-        echo "${{ secrets.DOCKERPW }}" | docker login -u johndavidmarx --password-stdin
+        echo "${{ secrets.DOCKERPW }}" | docker login -u louiskimlevu --password-stdin
         docker image build -t johndavidmarx/gitops:hellov1.3 .
         docker push louiskimlevu/gitops:hellov1.3
