--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -25,5 +25,5 @@ jobs:
       run: |
         cd ./python
         echo "${{ secrets.DOCKERPW }}" | docker login -u louiskimlevu --password-stdin
-        docker image build -t louiskimlevu/gitops:hello${{ github.sha }} .
-        docker push louiskimlevu/gitops:hello${{ github.sha }}
+        docker image build -t louiskimlevu/gitops:hello-${GITHUB_SHA::8} .
+        docker push louiskimlevu/gitops:hello-${GITHUB_SHA::8}
