--- a/qa/hello.yaml
+++ b/qa/hello.yaml
@@ -18,6 +18,6 @@ spec:
     spec:
       containers:
       - name: hello
-        image: louiskimlevu/gitops:hello5fe4a31122c217a9e1f46a81f6a9293fd6c5b7fa
+        image: louiskimlevu/gitops:hello-5a6a8031
         ports:
         - containerPort: 80
