--- a/production/hello.yaml
+++ b/production/hello.yaml
@@ -17,6 +17,7 @@ spec:
     spec:
       containers:
       - name: hello
-        image: louiskimlevu/gitops:hello-5a6a8031
+        #image: louiskimlevu/gitops:hello-5a6a8031
+        image: linuxacademycontent/gitops/hello-v1.2
         ports:
         - containerPort: 80
